--- a/examples/configs/distillation_math_cl.yaml
+++ b/examples/configs/distillation_math_cl.yaml
@@ -69,8 +69,8 @@ policy:
     backend: "vllm"  
     max_new_tokens: ${policy.max_total_sequence_length}  # 引用policy配置
     temperature: 1.0
-    top_p: 1.0
-    top_k: null
+    top_p: 0.95
+    top_k: 50
     stop_token_ids: null
     stop_strings: null
  
@@ -104,13 +104,12 @@ distillation:
   teacher_model_path: "Qwen/Qwen2.5-3B-Instruct"
   
   # 蒸馏策略参数
-  lambda: 1.0  # 学生自生成数据占比
   kl_type: "mixed"  # KL散度类型：forward, reverse, mixed
   mixed_kl_weight: 0.5  # 混合KL时的权重系数（当kl_type为"mixed"时使用）
   generate_strategy:  # 学生生成参数
     max_length: ${policy.max_total_sequence_length}  # 与policy配置保持一致
     max_new_tokens: 128  # 限制生成token数量，避免序列过长（这个值应该小于max_total_sequence_length）
-    temperature: 0.7  # 采样温度（控制生成随机性，默认为0.1）
+    temperature: 1.0  # 采样温度（控制生成随机性，默认为0.1）
     decoding_method: "top_p"  # 解码方式（如greedy、top_k）
   
 
